--- a/src/Variables/Variables.scss
+++ b/src/Variables/Variables.scss
@@ -2,6 +2,7 @@ $primaryColor: #005689;
 $secondaryColor: #007cb9;
 $tertiaryColor: #d5eeff;
 $subColor: #ff895d;
+$bgColor: #001d2e;
 
 @mixin borderStyling($outlinePX, $color) {
      box-shadow: none;
