--- a/src/styles/homePage.scss
+++ b/src/styles/homePage.scss
@@ -1,11 +1,75 @@
 @import "../Variables/Variables.scss";
 
 .containerParticles {
+     position: relative;
      height: 70vh;
+     overflow: hidden;
+
+     @media (max-width: 768px) {
+          height: 100vh;
+     }
+     @media (max-width: 576px) {
+          height: 80vh;
+     }
 
      #tsparticles {
-          width: 100%;
-          height: 100%;
+          @include calcDimension(0em, 0em);
+     }
+
+     .heroPageContainer {
+          @include calcDimension(0em, 0em);
+          position: absolute;
+          z-index: 1;
+          display: flex;
+          justify-content: space-evenly;
+          align-items: center;
+
+          .imgContainer {
+               position: relative;
+               display: flex;
+               justify-content: center;
+               left: 2em;
+               max-width: 40em;
+               min-width: 20em;
+               overflow: hidden;
+
+               .myImg {
+                    position: relative;
+                    object-fit: cover;
+                    width: calc(100%);
+                    filter: drop-shadow(0px 0px 20px $secondaryColor);
+               }
+
+               &::after {
+                    position: absolute;
+                    @include calcDimension(0em, 0em);
+                    display: block;
+                    content: "";
+                    top: 0;
+                    left: -1em;
+                    border-radius: 5% / 80%;
+                    background: linear-gradient(to top, black, transparent, transparent, transparent, transparent);
+
+                    @media (max-width: 576px) and (min-width: 576px) {
+                         width: 22em;
+                    }
+               }
+          }
+
+          .heroContentContainer {
+               color: $tertiaryColor;
+
+               button {
+                    max-width: 5em;
+               }
+
+               @media (max-width: 768px) {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+               }
+          }
      }
 }
 
