segregate homePage.scss

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -5,6 +5,10 @@
 
      a {
           color: $tertiaryColor;
+
+          &:focus {
+               color: $tertiaryColor;
+          }
      }
 
      button {
