--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -9,9 +9,14 @@
           color: $tertiaryColor;
           background-color: $bgColor;
           overflow: hidden;
+          transition: 0.5s ease-in-out;
 
           span {
                color: $subColor;
+          }
+
+          &:hover {
+               transform: translateY(-1.5em);
           }
      }
 
