--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -40,8 +40,10 @@ footer {
                margin: 0;
                li {
                     display: flex;
+                    position: static;
                     align-items: center;
                     padding: 0 1.5em;
+                    z-index: 5;
 
                     a {
                          color: $tertiaryColor;
