--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,14 +1,15 @@
 @import "../Variables/Variables.scss";
 
+:root {
+     --bs-navbar-active-color: unset !important;
+}
+
 .Navbar {
-     border-bottom: 1px solid;
+     border-bottom: 1px solid rgba(66, 66, 66, 0.493);
+     color: $tertiaryColor;
 
      a {
           color: $tertiaryColor;
-
-          &:hover {
-               color: $tertiaryColor;
-          }
      }
 
      button {
@@ -22,6 +23,12 @@
 }
 
 .navbar-brand {
+     color: $tertiaryColor !important;
+
+     &:hover {
+          color: $tertiaryColor !important;
+     }
+
      span {
           color: $subColor;
      }
@@ -37,7 +44,7 @@
           transition: 0.4s ease-in-out;
 
           &:hover {
-               color: $subColor;
+               color: $subColor !important;
           }
      }
 }
