--- a/src/styles/particleContainer.scss
+++ b/src/styles/particleContainer.scss
@@ -1,5 +1,4 @@
 @import "../Variables/Variables.scss";
-
 .containerParticles {
      display: flex;
      justify-content: center;
@@ -8,10 +7,10 @@
      overflow: hidden;
 
      @media (max-width: 768px) {
-          height: 100vh;
+          height: 120vh;
      }
      @media (max-width: 576px) {
-          height: 80vh;
+          height: 100vh;
      }
 
      #tsparticles {
@@ -65,11 +64,36 @@
                     font-size: 3em;
                }
 
-               button {
+               .exploreButton {
+                    text-decoration: none;
                     @include projBtn;
                     display: inline-block;
                     background-color: transparent !important;
                     color: $tertiaryColor !important;
+               }
+
+               ul > li {
+                    padding-top: 1.5em;
+                    width: 5em;
+
+                    @media (max-width: 768px) {
+                         display: flex;
+                         justify-content: center;
+                    }
+
+                    a {
+                         color: $secondaryColor;
+                         font-size: 2em;
+
+                         .logo {
+                              transition: 0.3s ease-in-out;
+
+                              &:hover {
+                                   color: $tertiaryColor;
+                                   transform: translateY(-0.2em);
+                              }
+                         }
+                    }
                }
 
                @media (max-width: 768px) {
