navbar UI revisions

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,5 +7,5 @@
 }
 
 .App {
-     background-color: rgb(0, 0, 0);
+     background: linear-gradient(to bottom, black 20%, rgb(9, 5, 29), rgb(13, 14, 24));
 }
