--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -84,10 +84,10 @@
 
      a {
           font-size: small;
-          color: $tertiaryColor;
+          color: $subColor;
 
           &:hover {
-               color: $subColor;
+               color: $secondaryColor;
           }
      }
 }
