small revision on navbar

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,6 +1,7 @@
 @import "../Variables/Variables.scss";
 
 .Navbar {
+     position: -webkit-sticky !important;
      position: sticky !important;
      top: 0 !important;
      z-index: 10 !important;
